Added source_url to default settings

--- a/redis/map.jinja
+++ b/redis/map.jinja
@@ -60,6 +60,7 @@
             '300 10',
             '60 10000'
             ],
+        'source_url': 'http://some-server/redis.tar.gz',
         'stop_writes_on_bgsave_error': 'yes',
         'svc_onboot': True,
         'svc_state': 'running',
